# rippy

./: Cargo.toml  README.MD  build.rs
src/: args.rs  crawl.rs  dir.rs  error.rs  ignorer.rs  lib.rs  main.rs  tcolor.rs  tree.rs
tests/: integration_test.rs
tests/common/: mod.rs
